# readwise-rs

./: Cargo.toml  README.md
migrations/2023-10-09-072829_create_results/: up.sql
src/: db.rs  document_list.rs  get_documents.rs  main.rs  models.rs  schema.rs
