[package]
name = "readwise-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
envy = "0.4.2" # typesafe env vars to structs
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
